
5.1.0 -> 5.2a0:
    - rse: more robust argument checking for CLI option --usecrypto
    - rse: add support for "lib<name>-config" and "lib<name>.pc" in RPM_CHECK_LIB
    - jbj: debuginfo: refactor 2 existing upgrade policy rules before
	adding a new contextually sensitive rule for -debuginfo packages.
    - jbj: debuginfo: add general rpmdbCount() to get number of items for
	any tag index, not just RPMTAG_NAME as was in rpmdbCountPackages().
    - jbj: add --with-openssl to devtool system target to enable the ssl
	digital signature implementation in rpmio/rpmssl.c at runtime.
    - jbj: rpmte: add rpmteSourcerpm() (for use as a -debuginfo buildset key).
    - jbj: fix: skip the :extractor/|transformer mark checking :xml/:yaml.
    - jbj: splint: annotate argvAppend differently.
    - jbj: hdrfmt: return failure if PACKAGE{ORIGIN,DIGEST} do not exist.
    - afb: standalone: file "magic" was installed in wrong directory
    - afb: fix VPATH builds finding rpmversion.h (in perl, with MakeMaker)
    - afb: fix VPATH builds finding rpmversion.h (in python)
    - afb: internal liblzma was not properly in autoconf/automake
    - afb: fix VPATH builds of lua finding "system.h" from popt (not rpm)
    - afb: fix VPATH builds finding rpmversion.h (in tools)
    - jbj: fix: rpm-python h['filenames'] needs tagName(0x54aafb71) to
	return "Filenames" in order to find the filepathsTag extension.
    - jbj: add enabler options to chase down headerLoad() hot-spots.
    - jbj: add a missing newline to a debug message.
    - jbj: revert rpmtsOpenDB on --checksig path, rely on the lazy open
	in rpmtsFindPubkey instead.
    - jbj: fix: rpm -qp returns NOKEY because rpmdb is not yet open. Do a lazy
	open in rpmtsFindPubkey.
    - jbj: add :rpn formatter to do simple arithemetic on input.
    - jbj: python: fix: insure that ts.setProbFilter() return is initialized.
    - jbj: fix: insure no access before buffer if fgets(3) returns NUL.